integration/main/default/objects/Request__c/fields/Callout_Name__c.field-meta.xml
<CustomField>
    <fullName>Callout_Name__c</fullName>
    <description>The name of the respective callout configuration metadata or other value for identification</description>
    <inlineHelpText>The name of the respective callout configuration metadata or other value for identification</inlineHelpText>
    <label>Callout Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>