integration/main/default/objects/Request__c/fields/Client_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Client_Certificate__c</fullName>
    <description>The name of the client certificate used for authentication.</description>
    <inlineHelpText>The name of the client certificate used for authentication.</inlineHelpText>
    <label>Client Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>