integration/main/default/objects/Request__c/fields/Compressed__c.field-meta.xml
<CustomField>
    <fullName>Compressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if compression was used for the request.</description>
    <inlineHelpText>Indicates if compression was used for the request.</inlineHelpText>
    <label>Compressed</label>
    <type>Checkbox</type>
</CustomField>