integration/main/default/objects/Request__c/fields/Encode_Query_Params__c.field-meta.xml
<CustomField>
    <fullName>Encode_Query_Params__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates of URL encoding was applied to an endpoint&apos;s query params</description>
    <inlineHelpText>Indicates of URL encoding was applied to an endpoint&apos;s query params</inlineHelpText>
    <label>Encode Query Params</label>
    <type>Checkbox</type>
</CustomField>