integration/main/default/objects/Request__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The endpoint targeted by the request</description>
    <inlineHelpText>The endpoint targeted by the request</inlineHelpText>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>