integration/main/default/objects/Request__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>The HTTP method used for the request</description>
    <inlineHelpText>The HTTP method used for the request</inlineHelpText>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>