integration/main/default/objects/Request__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>The named credential used for the request</description>
    <inlineHelpText>The named credential used for the request</inlineHelpText>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>