integration/main/default/objects/Request__c/fields/Query_Params__c.field-meta.xml
<CustomField>
    <fullName>Query_Params__c</fullName>
    <description>The JSON-formatted collection of query params sent with a request as part of the endpoint</description>
    <inlineHelpText>The JSON-formatted collection of query params sent with a request as part of the endpoint</inlineHelpText>
    <label>Query Params</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>