integration/main/default/objects/Request__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>The body of a request that&apos;s sent. Value will be truncated if it exceeds max length of the field</description>
    <inlineHelpText>The body of a request that&apos;s sent. Value will be truncated if it exceeds max length of the field</inlineHelpText>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>