integration/main/default/objects/Request__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <description>The JSON-formatted collection of headers sent with the request</description>
    <inlineHelpText>The JSON-formatted collection of headers sent with the request</inlineHelpText>
    <label>Request Headers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>