integration/main/default/objects/Request__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>The body of a response. Value will be truncated if it exceeds max length of the field</description>
    <inlineHelpText>The body of a response. Value will be truncated if it exceeds max length of the field</inlineHelpText>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>