integration/main/default/objects/Request__c/fields/Response_Headers__c.field-meta.xml
<CustomField>
    <fullName>Response_Headers__c</fullName>
    <description>The JSON-formatted collection of headers from a response</description>
    <inlineHelpText>The JSON-formatted collection of headers from a response</inlineHelpText>
    <label>Response Headers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>