integration/main/default/objects/Request__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>The HTTP status code of a response (E.g., 200)</description>
    <inlineHelpText>The HTTP status code of a response (E.g., 200)</inlineHelpText>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>