integration/main/default/objects/Request__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <description>The HTTP status message returned from a response</description>
    <inlineHelpText>The HTTP status message returned from a response</inlineHelpText>
    <label>Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>