integration/main/default/objects/Request__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>The timeout value that was set for the request (in milliseconds)</description>
    <inlineHelpText>The timeout value that was set for the request (in milliseconds)</inlineHelpText>
    <label>Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>